2013-07-15  horneds

	* Version 0.9.1
	* Allow mixer.sequence to get a few argument and make generators from them
	* Fix bug with 'mixer.fake' attribute;

2013-07-05  horneds

	* Version 0.8.1
	* Change float's generator (limits set to -99999 -- 99999)

2013-06-26  horneds

	* Version 0.8.0
	* Added automatic backend

2013-06-22  horneds

	* Version 0.7.0
	* Minor changes

2013-06-21  horneds

	* Version 0.6.4
	* Support django.models.URLField

2013-06-20  horneds

	* Version 0.6.3
	* Now `mixer.random` can accept a choices and return random value
	  http://mixer.readthedocs.org/en/latest/api.html#force-a-random-values

2013-06-19  horneds

	* Version 0.6.2
	* Added mongoengine support

2013-06-17  horneds

	* Version 0.5.1
	* Minor changes in docs

2013-06-04  horneds

	* Version 0.5.0
	* Mixer.random and Mixer.fake attributes could get a type of generated value
	* Mixer.select attribute could get a filters for DJango or SQLAlchemy query

2013-05-31  horneds

	* Version 0.4.1
	* Respect django choices and SQLAlchemy Enum

2013-05-30  horneds

	* Version 0.4.0
	* Minor release

2013-05-29  horneds

	* Version 0.3.3
	* Minor release

2013-05-28  horneds

	* Version 0.3.2
	* Fix python3 support
	* Force random related values for django

2013-05-27  horneds

	* Version 0.3.1
	* Fix release 0.3.0
	* Added work with unique values
	* Added mixer.mix property

2013-05-24  horneds

	* Version 0.3.0
	* Create some documentation

2013-05-21  horneds

	* Version 0.2.8
	* Update README

2013-05-20  horneds

	* Version 0.2.7
	* Support Python3

2013-05-08  horneds

	* Version 0.1.0
	* Initial release