@@ -1,2 +1,2 @@
-[*/test_*]
+[*/test*]
 lint_ignore=C0110,F0401
