@@ -63,6 +63,7 @@ setup(
     ],
 
     packages=['mixer', 'mixer.backend'],
+    include_package_data=True,
     install_requires=install_requires,
     tests_require=tests_require,
     test_suite='tests',
