@@ -9,12 +9,12 @@ commands=py.test
 deps =
     pytest
     mongoengine
+    flask-sqlalchemy
 
 [testenv:py26-d14]
 basepython = python2.6
 deps =
     django==1.4.5
-    flask-sqlalchemy
     importlib
     {[testenv]deps}
 
@@ -22,14 +22,12 @@ deps =
 basepython = python2.7
 deps =
     django==1.4.5
-    flask-sqlalchemy
     {[testenv]deps}
 
 [testenv:py26-d15]
 basepython = python2.6
 deps =
     django==1.5.1
-    flask-sqlalchemy
     importlib
     {[testenv]deps}
 
@@ -37,21 +35,18 @@ deps =
 basepython = python2.7
 deps =
     django==1.5.1
-    flask-sqlalchemy
     {[testenv]deps}
 
 [testenv:py33-d15]
 basepython = python3.3
 deps =
     django==1.5.1
-    sqlalchemy
     {[testenv]deps}
 
 [testenv:cov]
 deps =
     coverage
     django==1.5.1
-    flask-sqlalchemy
     {[testenv]deps}
 
 commands =
